--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@ h1 {
   letter-spacing: 3px;
 }
 
+@media only screen and (max-width: 500px) {
+  h1 {
+    font-size: 1.3em;
+  }
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -45,6 +51,12 @@ a {
   position: relative;
   top: -100px;
   padding: 20px;
+}
+
+@media only screen and (max-width: 500px) {
+  #dienste {
+    width: 80%;
+  }
 }
 
 #dienste > h2 {
@@ -76,6 +88,13 @@ a {
   padding: 0 30px 0 30px;
 }
 
+@media only screen and (max-width: 500px) {
+  .navBar {
+    padding: 0 15px 0 15px;
+    line-height: 80px;
+  }
+}
+
 .heroTitle::before {
   content: "";
   margin-top: 15px;
@@ -86,11 +105,23 @@ a {
   background-color: white;
 }
 
+@media only screen and (max-width: 500px) {
+  .heroTitle::before {
+    width: 90%;
+  }
+}
+
 .heroTitle {
   text-align: center;
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+@media only screen and (max-width: 500px) {
+  .heroTitle {
+    font-size: 1.3em;
+  }
 }
 
 .heroContent {
@@ -108,6 +139,12 @@ a {
   font-size: 5em;
 }
 
+@media only screen and (max-width: 500px) {
+  .slogan {
+    font-size: 3.5em;
+  }
+}
+
 .navWrapper {
   display: inline-flex;
   width: 50%;
@@ -115,8 +152,21 @@ a {
   right: 60px;
 }
 
+@media only screen and (max-width: 720px) {
+  .navWrapper {
+    display: none;
+  }
+}
+
 .navWrapper > a {
   flex: 1;
   text-align: right;
+}
+
+.menuBtn {
+  width: 35px;
+  position: absolute;
+  top: 22px;
+  right: 5px;
 }
 /*# sourceMappingURL=style.css.map */
