--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,10 @@ h1 {
     text-transform: uppercase;
     display: inline;
     letter-spacing: 3px;
+
+    @media only screen and (max-width: 500px) {
+      font-size: 1.3em;
+    }
 }
 
 a {
@@ -48,6 +52,10 @@ a {
     position: relative;
     top: -100px;
     padding: 20px;
+
+    @media only screen and (max-width: 500px) {
+      width: 80%;
+    }
 }
 
 #dienste > h2 {
@@ -77,6 +85,11 @@ a {
   right: 0;
   z-index: 2;
   padding: 0 30px 0 30px;
+
+  @media only screen and (max-width: 500px) {
+    padding: 0 15px 0 15px;
+    line-height: 80px;
+  }
 }
 
 .heroTitle::before {
@@ -87,6 +100,10 @@ a {
     display: block;
     height: 3px;
     background-color: white;
+
+    @media only screen and (max-width: 500px) {
+      width: 90%;
+    }
 }
 
 .heroTitle {
@@ -94,6 +111,10 @@ a {
     display: flex;
     align-items: center;
     flex-direction: column;
+
+    @media only screen and (max-width: 500px) {
+      font-size: 1.3em;
+    }
 }
 
 .heroContent {
@@ -109,6 +130,9 @@ a {
 .slogan {
   font-family: "Pacifico", cursive;
   font-size: 5em;
+  @media only screen and (max-width: 500px) {
+    font-size: 3.5em;
+  }
 }
 
 .navWrapper {
@@ -116,6 +140,11 @@ a {
     width: 50%;
     position: absolute;
     right: 60px;
+
+    @media only screen and (max-width: 720px) {
+        display: none;
+    }
+    
 }
 
 .navWrapper > a {
@@ -123,3 +152,9 @@ a {
     text-align: right;
 }
 
+.menuBtn {
+  width: 35px;
+  position: absolute;
+  top: 22px;
+  right: 5px;
+}
