--- a/css/style.css
+++ b/css/style.css
@@ -168,5 +168,12 @@ a {
   position: absolute;
   top: 22px;
   right: 5px;
+  display: none;
+}
+
+@media only screen and (max-width: 500px) {
+  .menuBtn {
+    display: inline-block;
+  }
 }
 /*# sourceMappingURL=style.css.map */
