changed language to spanish

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,12 @@ h1 {
   text-transform: uppercase;
   display: inline;
   letter-spacing: 3px;
+  font-size: 1.3em;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 400px) {
   h1 {
-    font-size: 1.3em;
+    font-size: 0.9em;
   }
 }
 
@@ -60,7 +61,7 @@ a {
 }
 
 #dienste > h2 {
-  color: #8D8D8D;
+  color: #8d8d8d;
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
@@ -78,6 +79,10 @@ a {
   z-index: 1;
 }
 
+.languageChange {
+  width: 25px;
+}
+
 .navBar {
   position: absolute;
   line-height: 60px;
@@ -88,7 +93,7 @@ a {
   padding: 0 30px 0 30px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 950px) {
   .navBar {
     padding: 0 15px 0 15px;
     line-height: 80px;
@@ -149,10 +154,10 @@ a {
   display: inline-flex;
   width: 50%;
   position: absolute;
-  right: 60px;
+  right: 0px;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 950px) {
   .navWrapper {
     display: none;
   }
@@ -160,7 +165,10 @@ a {
 
 .navWrapper > a {
   flex: 1;
-  text-align: right;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menuBtn {
@@ -171,7 +179,7 @@ a {
   display: none;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 950px) {
   .menuBtn {
     display: inline-block;
   }
