--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 $blue: #0062a2;
-$grey:#8D8D8D;
+$grey: #8d8d8d;
 
 * {
   margin: 0;
@@ -12,23 +12,24 @@ body {
 }
 
 span {
-    font-size: 4em;
+  font-size: 4em;
 }
 
 h1 {
-    text-transform: uppercase;
-    display: inline;
-    letter-spacing: 3px;
+  text-transform: uppercase;
+  display: inline;
+  letter-spacing: 3px;
+  font-size: 1.3em;
 
-    @media only screen and (max-width: 500px) {
-      font-size: 1.3em;
-    }
+  @media only screen and (max-width: 400px) {
+    font-size: 0.9em;
+  }
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    text-transform: uppercase;
+  text-decoration: none;
+  color: inherit;
+  text-transform: uppercase;
 }
 
 #heroSection {
@@ -42,27 +43,27 @@ a {
 }
 
 #dienste {
-    width: 70%;
-    height: 500px;
-    margin: auto;
-    z-index: 2;
-    border-radius: 30px;
-    box-shadow: 8px 7px 13px 1px rgba(0,0,0,0.49);
-    background-color: white;
-    position: relative;
-    top: -100px;
-    padding: 20px;
+  width: 70%;
+  height: 500px;
+  margin: auto;
+  z-index: 2;
+  border-radius: 30px;
+  box-shadow: 8px 7px 13px 1px rgba(0, 0, 0, 0.49);
+  background-color: white;
+  position: relative;
+  top: -100px;
+  padding: 20px;
 
-    @media only screen and (max-width: 500px) {
-      width: 80%;
-    }
+  @media only screen and (max-width: 500px) {
+    width: 80%;
+  }
 }
 
 #dienste > h2 {
-    color: $grey;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
+  color: $grey;
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .overlay {
@@ -77,6 +78,10 @@ a {
   z-index: 1;
 }
 
+.languageChange {
+  width: 25px;
+}
+
 .navBar {
   position: absolute;
   line-height: 60px;
@@ -86,35 +91,35 @@ a {
   z-index: 2;
   padding: 0 30px 0 30px;
 
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 950px) {
     padding: 0 15px 0 15px;
     line-height: 80px;
   }
 }
 
 .heroTitle::before {
-    content: "";
-    margin-top: 15px;
-    margin-bottom: 15px;
-    width: 130%;
-    display: block;
-    height: 3px;
-    background-color: white;
+  content: "";
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 130%;
+  display: block;
+  height: 3px;
+  background-color: white;
 
-    @media only screen and (max-width: 500px) {
-      width: 90%;
-    }
+  @media only screen and (max-width: 500px) {
+    width: 90%;
+  }
 }
 
 .heroTitle {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
-    @media only screen and (max-width: 500px) {
-      font-size: 1.3em;
-    }
+  @media only screen and (max-width: 500px) {
+    font-size: 1.3em;
+  }
 }
 
 .heroContent {
@@ -136,20 +141,22 @@ a {
 }
 
 .navWrapper {
-    display: inline-flex;
-    width: 50%;
-    position: absolute;
-    right: 60px;
+  display: inline-flex;
+  width: 50%;
+  position: absolute;
+  right: 0px;
 
-    @media only screen and (max-width: 720px) {
-        display: none;
-    }
-    
+  @media only screen and (max-width: 950px) {
+    display: none;
+  }
 }
 
 .navWrapper > a {
-    flex: 1;
-    text-align: right;
+  flex: 1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menuBtn {
@@ -159,7 +166,7 @@ a {
   right: 5px;
   display: none;
 
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 950px) {
     display: inline-block;
   }
 }
