--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 $blue: #0062a2;
-$grey: #8d8d8d;
+$grey: #747474;
 
 * {
   margin: 0;
@@ -44,7 +44,7 @@ a {
 
 #dienste {
   width: 70%;
-  height: 500px;
+  height: auto;
   margin: auto;
   z-index: 2;
   border-radius: 30px;
@@ -64,6 +64,7 @@ a {
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .overlay {
@@ -169,4 +170,23 @@ a {
   @media only screen and (max-width: 950px) {
     display: inline-block;
   }
+}
+
+.diensteWrapper {
+  color: $grey;
+  display: flex;
+  line-height: 170%;
+  width: 100%;
+  padding: 30px 0 30px 0;
+  align-items: center;
+}
+
+.diensteWrapper > img {
+  flex-grow: 1;
+  height: 65px;
+  padding: 0 40px 0 20px;
+}
+
+.diensteWrapper > div {
+  flex-grow: 2;
 }
