--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ span {
   font-size: 4em;
 }
 
+p {
+  font-size: 1em;
+  font-weight: 400;
+}
+
 h1 {
   text-transform: uppercase;
   display: inline;
@@ -203,5 +208,53 @@ a {
 
 .diensteWrapper > div {
   flex-grow: 2;
+}
+
+#about {
+  color: #747474;
+  margin-bottom: 70px;
+}
+
+.container {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+  line-height: 180%;
+}
+
+.container > h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+
+.container > img {
+  height: 260px;
+  margin-bottom: 30px;
+}
+
+#contact {
+  color: #747474;
+  padding: 50px;
+}
+
+.container > a {
+  text-decoration: underline;
+  display: inline-block;
+  margin: 5px 0 20px 0;
+  color: #0062a2;
+}
+
+.footer {
+  background-color: #0062a2;
+  line-height: 40px;
+  font-size: 0.8em;
+  font-weight: 300;
+  display: flex;
+  text-align: center;
+}
+
+.footer > a {
+  flex: 1;
 }
 /*# sourceMappingURL=style.css.map */
