--- a/css/style.scss
+++ b/css/style.scss
@@ -112,6 +112,10 @@ a {
   position: fixed;
   width: 100%;
   display: flex;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   align-items: center;
   justify-content: center;
   height: 100%;
