--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,13 @@ a {
   padding: 0 40px 0 20px;
 }
 
+@media only screen and (max-width: 950px) {
+  .diensteWrapper > img {
+    max-width: 40px;
+    height: 40px;
+  }
+}
+
 .diensteWrapper > div {
   flex-grow: 2;
 }
