--- a/css/style.scss
+++ b/css/style.scss
@@ -243,6 +243,11 @@ a {
   height: 65px;
   max-width: 65px;
   padding: 0 40px 0 20px;
+
+  @media only screen and (max-width: 950px) {
+    max-width: 40px;
+    height: 40px;
+  }
 }
 
 .diensteWrapper > div {
